objdiff-core/tests/snapshots/macho__arm64_32_object.snap
---
source: objdiff-core/tests/macho.rs
expression: obj
---
Object {
    arch: ArchArm64,
    endianness: Little,
    symbols: [
        Symbol {
            name: "[__text]",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 0,
            kind: Section,
            section: Some(
                0,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "__Z9fibonaccij",
            demangled_name: Some(
                "fibonacci(unsigned int)",
            ),
            normalized_name: None,
            address: 0,
            size: 56,
            kind: Function,
            section: Some(
                0,
            ),
            flags: FlagSet(Global | SizeInferred),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "_main",
            demangled_name: None,
            normalized_name: None,
            address: 56,
            size: 96,
            kind: Function,
            section: Some(
                0,
            ),
            flags: FlagSet(Global | SizeInferred),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "[__cstring]",
            demangled_name: None,
            normalized_name: None,
            address: 152,
            size: 0,
            kind: Section,
            section: Some(
                1,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "l_.str.1",
            demangled_name: None,
            normalized_name: None,
            address: 152,
            size: 16,
            kind: Object,
            section: Some(
                1,
            ),
            flags: FlagSet(Local | SizeInferred),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "l_str",
            demangled_name: None,
            normalized_name: None,
            address: 168,
            size: 14,
            kind: Object,
            section: Some(
                1,
            ),
            flags: FlagSet(Local | SizeInferred),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "[__compact_unwind]",
            demangled_name: None,
            normalized_name: None,
            address: 184,
            size: 40,
            kind: Section,
            section: Some(
                2,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "_printf",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 0,
            kind: Unknown,
            section: None,
            flags: FlagSet(Global),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "_puts",
            demangled_name: None,
            normalized_name: None,
            address: 0,
            size: 0,
            kind: Unknown,
            section: None,
            flags: FlagSet(Global),
            align: None,
            virtual_address: None,
        },
        Symbol {
            name: "[__cstring-0]",
            demangled_name: None,
            normalized_name: None,
            address: 152,
            size: 30,
            kind: Section,
            section: Some(
                1,
            ),
            flags: FlagSet(Local),
            align: None,
            virtual_address: None,
        },
    ],
    sections: [
        Section {
            id: "__text-0",
            name: "__text",
            address: 0,
            size: 152,
            kind: Code,
            data: SectionData(
                152,
            ),
            flags: FlagSet(),
            align: Some(
                4,
            ),
            relocations: [
                Relocation {
                    flags: MachO {
                        r_type: 3,
                        r_pcrel: true,
                        r_length: 2,
                    },
                    address: 72,
                    target_symbol: 5,
                    addend: 0,
                },
                Relocation {
                    flags: MachO {
                        r_type: 4,
                        r_pcrel: false,
                        r_length: 2,
                    },
                    address: 76,
                    target_symbol: 5,
                    addend: 0,
                },
                Relocation {
                    flags: MachO {
                        r_type: 2,
                        r_pcrel: true,
                        r_length: 2,
                    },
                    address: 80,
                    target_symbol: 8,
                    addend: 0,
                },
                Relocation {
                    flags: MachO {
                        r_type: 3,
                        r_pcrel: true,
                        r_length: 2,
                    },
                    address: 88,
                    target_symbol: 4,
                    addend: 0,
                },
                Relocation {
                    flags: MachO {
                        r_type: 4,
                        r_pcrel: false,
                        r_length: 2,
                    },
                    address: 92,
                    target_symbol: 4,
                    addend: 0,
                },
                Relocation {
                    flags: MachO {
                        r_type: 2,
                        r_pcrel: true,
                        r_length: 2,
                    },
                    address: 100,
                    target_symbol: 1,
                    addend: 0,
                },
                Relocation {
                    flags: MachO {
                        r_type: 2,
                        r_pcrel: true,
                        r_length: 2,
                    },
                    address: 116,
                    target_symbol: 7,
                    addend: 0,
                },
            ],
            line_info: {},
            virtual_address: None,
        },
        Section {
            id: "__cstring-0",
            name: "__cstring",
            address: 152,
            size: 30,
            kind: Data,
            data: SectionData(
                30,
            ),
            flags: FlagSet(),
            align: Some(
                1,
            ),
            relocations: [],
            line_info: {},
            virtual_address: None,
        },
        Section {
            id: "__compact_unwind-0",
            name: "__compact_unwind",
            address: 184,
            size: 40,
            kind: Unknown,
            data: SectionData(
                0,
            ),
            flags: FlagSet(),
            align: Some(
                4,
            ),
            relocations: [],
            line_info: {},
            virtual_address: None,
        },
    ],
    split_meta: None,
    path: None,
    timestamp: None,
    flow_analysis_results: {},
}
