objdiff-core/tests/snapshots/macho__arm64_display.snap
---
source: objdiff-core/tests/macho.rs
expression: output
---
[(Address(0), Dim, 5), (Spacing(4), Normal, 0), (Opcode("sub", 19), Normal, 10), (Argument(Opaque("sp")), Normal, 0), (Basic(", "), Normal, 0), (Argument(Opaque("sp")), Normal, 0), (Basic(", "), Normal, 0), (Basic("#"), Normal, 0), (Argument(Unsigned(48)), Normal, 0), (Eol, Normal, 0)]
[(Address(4), Dim, 5), (Spacing(4), Normal, 0), (Opcode("stp", 70), Normal, 10), (Argument(Opaque("x20")), Normal, 0), (Basic(", "), Normal, 0), (Argument(Opaque("x19")), Normal, 0), (Basic(", "), Normal, 0), (Basic("["), Normal, 0), (Argument(Opaque("sp")), Normal, 0), (Basic(", "), Normal, 0), (Basic("#"), Normal, 0), (Argument(Signed(16)), Normal, 0), (Basic("]"), Normal, 0), (Eol, Normal, 0)]
[(Address(8), Dim, 5), (Spacing(4), Normal, 0), (Opcode("stp", 70), Normal, 10), (Argument(Opaque("x29")), Normal, 0), (Basic(", "), Normal, 0), (Argument(Opaque("x30")), Normal, 0), (Basic(", "), Normal, 0), (Basic("["), Normal, 0), (Argument(Opaque("sp")), Normal, 0), (Basic(", "), Normal, 0), (Basic("#"), Normal, 0), (Argument(Signed(32)), Normal, 0), (Basic("]"), Normal, 0), (Eol, Normal, 0)]
[(Address(12), Dim, 5), (Spacing(4), Normal, 0), (Opcode("add", 17), Normal, 10), (Argument(Opaque("x29")), Normal, 0), (Basic(", "), Normal, 0), (Argument(Opaque("sp")), Normal, 0), (Basic(", "), Normal, 0), (Basic("#"), Normal, 0), (Argument(Unsigned(32)), Normal, 0), (Eol, Normal, 0)]
[(Address(16), Dim, 5), (Spacing(4), Normal, 0), (Opcode("adrp", 24), Normal, 10), (Argument(Opaque("x0")), Normal, 0), (Basic(", "), Normal, 0), (Symbol(Symbol { name: "l_str", demangled_name: None, normalized_name: None, address: 164, size: 14, kind: Object, section: Some(1), flags: FlagSet(Local | SizeInferred), align: None, virtual_address: None }), Bright, 0), (Eol, Normal, 0)]
[(Address(20), Dim, 5), (Spacing(4), Normal, 0), (Opcode("add", 17), Normal, 10), (Argument(Opaque("x0")), Normal, 0), (Basic(", "), Normal, 0), (Argument(Opaque("x0")), Normal, 0), (Basic(", "), Normal, 0), (Symbol(Symbol { name: "l_str", demangled_name: None, normalized_name: None, address: 164, size: 14, kind: Object, section: Some(1), flags: FlagSet(Local | SizeInferred), align: None, virtual_address: None }), Bright, 0), (Eol, Normal, 0)]
[(Address(24), Dim, 5), (Spacing(4), Normal, 0), (Opcode("bl", 92), Normal, 10), (Symbol(Symbol { name: "_puts", demangled_name: None, normalized_name: None, address: 0, size: 0, kind: Unknown, section: None, flags: FlagSet(Global), align: None, virtual_address: None }), Bright, 0), (Eol, Normal, 0)]
[(Address(28), Dim, 5), (Spacing(4), Normal, 0), (Opcode("mov", 3), Normal, 10), (Argument(Opaque("w19")), Normal, 0), (Basic(", "), Normal, 0), (Basic("#"), Normal, 0), (Argument(Unsigned(0)), Normal, 0), (Eol, Normal, 0)]
[(Address(32), Dim, 5), (Spacing(4), Normal, 0), (Opcode("adrp", 24), Normal, 10), (Argument(Opaque("x20")), Normal, 0), (Basic(", "), Normal, 0), (Symbol(Symbol { name: "l_.str.1", demangled_name: None, normalized_name: None, address: 148, size: 16, kind: Object, section: Some(1), flags: FlagSet(Local | SizeInferred), align: None, virtual_address: None }), Bright, 0), (Eol, Normal, 0)]
[(Address(36), Dim, 5), (Spacing(4), Normal, 0), (Opcode("add", 17), Normal, 10), (Argument(Opaque("x20")), Normal, 0), (Basic(", "), Normal, 0), (Argument(Opaque("x20")), Normal, 0), (Basic(", "), Normal, 0), (Symbol(Symbol { name: "l_.str.1", demangled_name: None, normalized_name: None, address: 148, size: 16, kind: Object, section: Some(1), flags: FlagSet(Local | SizeInferred), align: None, virtual_address: None }), Bright, 0), (Eol, Normal, 0)]
[(Address(40), Dim, 5), (BranchArrow(17), Rotating(0), 0), (Opcode("mov", 9), Normal, 10), (Argument(Opaque("x0")), Normal, 0), (Basic(", "), Normal, 0), (Argument(Opaque("x19")), Normal, 0), (Eol, Normal, 0)]
[(Address(44), Dim, 5), (Spacing(4), Normal, 0), (Opcode("bl", 92), Normal, 10), (Symbol(Symbol { name: "__Z9fibonaccij", demangled_name: Some("fibonacci(unsigned int)"), normalized_name: None, address: 0, size: 56, kind: Function, section: Some(0), flags: FlagSet(Global | SizeInferred), align: None, virtual_address: None }), Bright, 0), (Eol, Normal, 0)]
[(Address(48), Dim, 5), (Spacing(4), Normal, 0), (Opcode("stp", 70), Normal, 10), (Argument(Opaque("x19")), Normal, 0), (Basic(", "), Normal, 0), (Argument(Opaque("x0")), Normal, 0), (Basic(", "), Normal, 0), (Basic("["), Normal, 0), (Argument(Opaque("sp")), Normal, 0), (Basic("]"), Normal, 0), (Eol, Normal, 0)]
[(Address(52), Dim, 5), (Spacing(4), Normal, 0), (Opcode("mov", 9), Normal, 10), (Argument(Opaque("x0")), Normal, 0), (Basic(", "), Normal, 0), (Argument(Opaque("x20")), Normal, 0), (Eol, Normal, 0)]
[(Address(56), Dim, 5), (Spacing(4), Normal, 0), (Opcode("bl", 92), Normal, 10), (Symbol(Symbol { name: "_printf", demangled_name: None, normalized_name: None, address: 0, size: 0, kind: Unknown, section: None, flags: FlagSet(Global), align: None, virtual_address: None }), Bright, 0), (Eol, Normal, 0)]
[(Address(60), Dim, 5), (Spacing(4), Normal, 0), (Opcode("add", 17), Normal, 10), (Argument(Opaque("w19")), Normal, 0), (Basic(", "), Normal, 0), (Argument(Opaque("w19")), Normal, 0), (Basic(", "), Normal, 0), (Basic("#"), Normal, 0), (Argument(Unsigned(1)), Normal, 0), (Eol, Normal, 0)]
[(Address(64), Dim, 5), (Spacing(4), Normal, 0), (Opcode("cmp", 18), Normal, 10), (Argument(Opaque("w19")), Normal, 0), (Basic(", "), Normal, 0), (Basic("#"), Normal, 0), (Argument(Unsigned(16)), Normal, 0), (Eol, Normal, 0)]
[(Address(68), Dim, 5), (Spacing(4), Normal, 0), (Opcode("b.ne", 91), Normal, 10), (Basic("$"), Normal, 0), (BranchDest(40), Normal, 0), (BranchArrow(10), Rotating(0), 0), (Eol, Normal, 0)]
[(Address(72), Dim, 5), (Spacing(4), Normal, 0), (Opcode("mov", 3), Normal, 10), (Argument(Opaque("w0")), Normal, 0), (Basic(", "), Normal, 0), (Basic("#"), Normal, 0), (Argument(Unsigned(0)), Normal, 0), (Eol, Normal, 0)]
[(Address(76), Dim, 5), (Spacing(4), Normal, 0), (Opcode("ldp", 36), Normal, 10), (Argument(Opaque("x29")), Normal, 0), (Basic(", "), Normal, 0), (Argument(Opaque("x30")), Normal, 0), (Basic(", "), Normal, 0), (Basic("["), Normal, 0), (Argument(Opaque("sp")), Normal, 0), (Basic(", "), Normal, 0), (Basic("#"), Normal, 0), (Argument(Signed(32)), Normal, 0), (Basic("]"), Normal, 0), (Eol, Normal, 0)]
[(Address(80), Dim, 5), (Spacing(4), Normal, 0), (Opcode("ldp", 36), Normal, 10), (Argument(Opaque("x20")), Normal, 0), (Basic(", "), Normal, 0), (Argument(Opaque("x19")), Normal, 0), (Basic(", "), Normal, 0), (Basic("["), Normal, 0), (Argument(Opaque("sp")), Normal, 0), (Basic(", "), Normal, 0), (Basic("#"), Normal, 0), (Argument(Signed(16)), Normal, 0), (Basic("]"), Normal, 0), (Eol, Normal, 0)]
[(Address(84), Dim, 5), (Spacing(4), Normal, 0), (Opcode("add", 17), Normal, 10), (Argument(Opaque("sp")), Normal, 0), (Basic(", "), Normal, 0), (Argument(Opaque("sp")), Normal, 0), (Basic(", "), Normal, 0), (Basic("#"), Normal, 0), (Argument(Unsigned(48)), Normal, 0), (Eol, Normal, 0)]
[(Address(88), Dim, 5), (Spacing(4), Normal, 0), (Opcode("ret", 102), Normal, 10), (Eol, Normal, 0)]
